<resources>
    <string name="app_name">MobileApp</string>
    <string name="favourite_list_label">Favourite List</string>
    <string name="pending_approvals_label">Pending Approvals</string>
    <string name="feedback_list_label">Feedbacks</string>
    <string name="sort_label">Sort</string>
    <string name="filter_label">Filter</string>
    <string name="facility_category_label">Facility Category</string>
    <string name="my_profile_label">My Profile</string>
    <string-array name="spinner_sort_user">
        <item>Sort ascending</item>
        <item>Sort descending</item>
    </string-array>
    <string-array name="spinner_sort_admin">
        <item>Sort ascending</item>
        <item>Sort descending</item>
    </string-array>
    <string-array name="spinner_filter_category">
        <item>All</item>
        <item>OKU Parking</item>
        <item>OKU Toilet</item>
        <item>OKU Seat</item>
        <item>Wheelchair</item>
    </string-array>
    <string-array name="spinner_filter_location">
        <item>All</item>
        <item>Johor</item>
        <item>Kedah</item>
        <item>Kelantan</item>
        <item>Malacca</item>
        <item>Negeri Sembilan</item>
        <item>Pahang</item>
        <item>Penang</item>
        <item>Perak</item>
        <item>Perlis</item>
        <item>Sabah</item>
        <item>Sarawak</item>
        <item>Selangor</item>
        <item>Terengganu</item>
    </string-array>
    <string-array name="spinner_feedback_type">
        <item>Incorrect Name</item>
        <item>Incorrect Operation Hours</item>
        <item>Incorrect Address</item>
        <item>Incorrect OKU Feature</item>
    </string-array>

    //Common
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>

    //User Profile
    <string name="txtView_full_name_label">Full Name</string>
    <string name="txtView_email_label">Email</string>
    <string name="txtView_password_label">Password</string>
    <string name="txtView_location_label">Location</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_save">Save</string>

    //Upload Facility
    <string name="btn_pickImage">Pick Image</string>
    <string name="txtView_facility_name_label">Facility Name</string>
    <string name="txtView_operationHrs_label">Operation Hours</string>
    <string name="txtView_start_time_label">Start Time</string>
    <string name="txtView_close_time_label">Close Time</string>
    <string name="txtView_address_label">Address</string>
    <string name="txtView_oku_feature_label">OKU Feature</string>
    <string name="btnUpload">Upload</string>
    <string-array name="spinner_operation_hours">
        <item>6am</item>
        <item>7am</item>
        <item>8am</item>
        <item>9am</item>
        <item>10am</item>
        <item>11am</item>
        <item>12pm</item>
        <item>1pm</item>
        <item>2pm</item>
        <item>3pm</item>
        <item>4pm</item>
        <item>5pm</item>
        <item>6pm</item>
        <item>7pm</item>
        <item>8pm</item>
        <item>9pm</item>
        <item>10pm</item>
    </string-array>
    <string name="exampleAddress_label">Eg: Street Address</string>
    <string name="txtView_city_label">City</string>
    <string-array name="spinner_City">
        <item>George Town</item>
        <item>Alor Star</item>
        <item>Ipoh</item>
        <item>Kuching</item>
        <item>Kuantan</item>
    </string-array>
    <string name="txtView_state_label">State</string>
    <string-array name="spinner_State">
        <item>Pulau Pinang</item>
        <item>Kedah</item>
        <item>Perak</item>
        <item>Sarawak</item>
        <item>Pahang</item>
    </string-array>
    <string name="txtView_zipcode_label">Zip Code</string>
    <string name="exampleZipcode_label">Eg: 12345</string>
    <string-array name="spinner_oku_feature">
        <item>None</item>
        <item>OKU Parking</item>
        <item>OKU Toilet</item>
        <item>OKU Seat</item>
        <item>Wheelchair</item>
    </string-array>
    <string name="txtView_facilityCategory">Category</string>
    <string-array name="spinner_facilityCategory">
        <item>OKU Toilet</item>
        <item>OKU Bus</item>
        <item>OKU Park</item>
        <item>OKU Parking</item>
    </string-array>
    <string name="txtView_feedback">Feedback</string>
    <string name="txtView_rating">Rating</string>
    <string-array name="spinner_rating">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="txtViewFeedback">Feedback</string>


    //Facility Category
    <string name="okuToilet_label">OKU Toilet</string>
    <string name="okuParking_label">OKU Parking</string>
    <string name="okuPark_label">OKU Park</string>
    <string name="bus_station_label">Bus Station</string>
    <string name="favorites_label">Favorites</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    //Login
    <string name="welcome">Welcome</string>
    <string name="logintext">Login to your account</string>
    <string name="search_facility">Search facility</string>
    <string name="delete_this_image">Delete this image?</string>
    <string name="signin">Sign in</string>
    <string name="registernavtext">Don\'t have an account?</string>
    <string name="registenav">Sign up here</string>
    <string name="adminnavtext">You are an Admin?</string>
    <string name="adminnav">Login Here</string>

    //Register
    <string name="registertxt">Create your account here</string>\
    <string name="signup">Sign up</string>
    <string name="usertxt">Already have an account?</string>

    //Admin
    <string name="admintxt">Login as admin</string>
    <string name="usernavtext">Not an Admin?</string>

    //Admin Homepage
    <string name="welcomeadmin">Welcome Admin</string>
    <string name="actiontxt">Please select your action</string>
    <string name="facility">All Facilities</string>
    <string name="pending">Pending Approvals</string>
    <string name="feedbacklist">Feedback List</string>


    //Facility Details
    <string name="status">Available</string>
    <string name="hours">Operation Hours:</string>
    <string name="address">Address:</string>
    <string name="feedback">View Feedbacks</string>
    <string name="navigate">Navigate</string>

    //Pending Facility
    <string name="deny">Deny</string>
    <string name="approve">Approve</string>

    //Submit Feedback Dialog
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="feedback_type">Feedback Type</string>
    <string name="comment">Comment</string>
    <string name="suggested_edit">Suggested Edit</string>
    <string name="hint">Enter something</string>

    //Feedback Dialog
    <string name="accept">Accept</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="search">Search</string>
    <string name="log_out">Log Out</string>
    <string name="upload_facility">Upload facility</string>
    <string name="locate_me">Locate me</string>
    <string name="location">LOCATION</string>
    <string name="apply">Apply</string>
    <string name="category">CATEGORY</string>
    <string name="view">View</string>
    <string name="delete_this_facility">Delete this facility?</string>
    <string name="title_activity_maps">Maps</string>
</resources>


