<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UploadFacilityFragment">

    <ImageSwitcher
        android:id="@+id/imgSwitcher_Facility"
        android:layout_width="0dp"
        android:layout_height="160dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_Pick_Facility_Image"
        android:layout_width="97dp"
        android:layout_height="48dp"
        android:padding="10dp"
        android:text="@string/btn_pickImage"
        android:textSize="10sp"
        app:backgroundTint="#0693EF"
        app:cornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgSwitcher_Facility" />

    <TextView
        android:id="@+id/textViewFacilityName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/txtView_facility_name_label"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_Pick_Facility_Image" />

    <TextView
        android:id="@+id/textViewOperationHour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:text="@string/txtView_operationHrs_label"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtFacility_Name" />

    <TextView
        android:id="@+id/textViewST"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="2dp"
        android:text="@string/txtView_start_time_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewOperationHour" />

    <TextView
        android:id="@+id/textViewCT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:text="@string/txtView_close_time_label"
        app:layout_constraintBottom_toBottomOf="@+id/textViewST"
        app:layout_constraintStart_toEndOf="@+id/textViewST"
        app:layout_constraintTop_toTopOf="@+id/textViewST"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="117dp"
        android:text="@string/txtView_state_label"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewCity"
        app:layout_constraintStart_toEndOf="@+id/textViewCity"
        app:layout_constraintTop_toTopOf="@+id/textViewCity"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textViewLabelAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="12dp"
        android:text="@string/txtView_address_label"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerST" />

    <TextView
        android:id="@+id/textViewCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="12dp"
        android:text="@string/txtView_city_label"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtFacility_Address" />

    <TextView
        android:id="@+id/textViewFeature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:text="@string/txtView_oku_feature_label"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewCT"
        app:layout_constraintStart_toEndOf="@+id/textViewCT"
        app:layout_constraintTop_toTopOf="@+id/textViewCT"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnUpload_Facility_Cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:text="@string/btn_cancel"
        android:textAllCaps="false"
        android:textSize="12sp"
        app:backgroundTint="#737373"
        app:cornerRadius="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtFacility_State" />

    <Button
        android:id="@+id/btnUpload_Facility_Upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        android:padding="10dp"
        android:text="@string/btnUpload"
        android:textAllCaps="false"
        android:textSize="12sp"
        app:backgroundTint="#0693EF"
        app:cornerRadius="12dp"
        app:icon="@drawable/ic_upload"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtFacility_State" />

    <EditText
        android:id="@+id/txtFacility_Name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:ems="10"
        android:hint="@string/txtView_facility_name_label"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textSize="14sp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewFacilityName" />

    <Spinner
        android:id="@+id/spinnerST"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="2dp"
        android:entries="@array/spinner_operation_hours"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewST" />

    <Spinner
        android:id="@+id/spinnerCT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:entries="@array/spinner_operation_hours"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/spinnerST"
        app:layout_constraintStart_toEndOf="@+id/spinnerST"
        app:layout_constraintTop_toTopOf="@+id/spinnerST" />

    <TextView
        android:id="@+id/textViewZipcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="107dp"
        android:text="@string/txtView_zipcode_label"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewState"
        app:layout_constraintStart_toEndOf="@+id/textViewState"
        app:layout_constraintTop_toTopOf="@+id/textViewState"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/txtFacility_Address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:ems="10"
        android:hint="@string/exampleAddress_label"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textSize="14sp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLabelAddress" />

    <EditText
        android:id="@+id/txtFacility_City"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="2dp"
        android:ems="10"
        android:hint="@string/exampleCity_label"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textSize="14sp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCity" />

    <EditText
        android:id="@+id/txtFacility_State"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:ems="10"
        android:hint="@string/exampleState_label"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textSize="14sp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:layout_constraintBottom_toBottomOf="@+id/txtFacility_City"
        app:layout_constraintStart_toEndOf="@+id/txtFacility_City"
        app:layout_constraintTop_toTopOf="@+id/txtFacility_City" />

    <EditText
        android:id="@+id/txtFacility_Zip_Code"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:ems="10"
        android:hint="@string/exampleZipcode_label"
        android:inputType="number"
        android:minHeight="48dp"
        android:textSize="14sp"
        android:maxLength="5"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:layout_constraintBottom_toBottomOf="@+id/txtFacility_State"
        app:layout_constraintStart_toEndOf="@+id/txtFacility_State"
        app:layout_constraintTop_toTopOf="@+id/txtFacility_State" />

    <Spinner
        android:id="@+id/txtOKU_Feature"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:entries="@array/spinner_oku_feature"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/spinnerCT"
        app:layout_constraintStart_toEndOf="@+id/spinnerCT"
        app:layout_constraintTop_toTopOf="@+id/spinnerCT"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_Previous_Img"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="55dp"
        android:background="@drawable/round_button"
        android:shadowColor="#DCDCDC"
        android:textColor="#191111"
        app:backgroundTint="#2196F3"
        app:icon="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="@+id/imgSwitcher_Facility"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="#DCDCDC"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btn_Next_Img"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/round_button"
        app:backgroundTint="#2196F3"
        app:icon="@drawable/ic_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>