<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout4"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".facility.DialogDeleteFacilityFragment">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/delete_this_facility"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/dialogDeleteFacility_btnDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:text="@string/delete"
        android:textAllCaps="false"
        android:textSize="12sp"
        app:backgroundTint="#B73333"
        app:icon="@drawable/ic_iconoir_delete_circled_outline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/dialogDeleteFacility_btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/btn_cancel"
        android:textAllCaps="false"
        android:textSize="12sp"
        app:backgroundTint="#737373"
        app:icon="@drawable/ic_iconoir_delete_circled_outline"
        app:layout_constraintBottom_toBottomOf="@+id/dialogDeleteFacility_btnDelete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/dialogDeleteFacility_btnDelete"
        app:layout_constraintTop_toTopOf="@+id/dialogDeleteFacility_btnDelete" />

</androidx.constraintlayout.widget.ConstraintLayout>