<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FavouriteListFragment">

    <LinearLayout
        android:id="@+id/feedbackList_linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/feedbackList_btnSort"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/sort_label"
            android:textColor="#000000"
            app:backgroundTint="#FFFFFF" />

        <Button
            android:id="@+id/feedbackList_btnFilter"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/filter_label"
            android:textColor="#000000"
            app:backgroundTint="#FFFFFF" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/feedbackList_linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/feedbackList_btnPendingApprovals"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/pending_approvals_label"
            android:textColor="#000000"
            app:backgroundTint="#FFFFFF" />

        <Button
            android:id="@+id/feedbackList_btnFeedback"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/feedback_list_label"
            android:textColor="#000000"
            app:backgroundTint="#FFFFFF" />
    </LinearLayout>

    <ListView
        android:id="@+id/feedbackList_listView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:divider="@android:color/transparent"
        android:dividerHeight="10.0sp"
        app:layout_constraintBottom_toTopOf="@+id/feedbackList_linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feedbackList_linearLayout1"
        tools:listitem="@layout/facility_layout" />


</androidx.constraintlayout.widget.ConstraintLayout>